# DAIRRy-BLUP

./: README.md  index.html  params.json
DAIRRy-BLUP/: CMakeLists.txt  README.md  defaultinput.txt  main.cpp
DAIRRy-BLUP/example/: EBV.txt  defaultinput.txt  estimates.txt
DAIRRy-BLUP/src/: crossvalidation.cpp  defaultinput.txt  readdist.cpp  readhdf5.cpp  readinput.cpp  shared_var.h  tools.cpp
